--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <script>
+      // Shim process.env for the browser environment to prevent crashes
+      window.process = {
+        env: {
+          NODE_ENV: 'production',
+          API_KEY: '' // This will be injected by the environment if available
+        }
+      };
+    </script>
     <style>
       :root {
         --mint-accent: #76C7C0;
@@ -63,7 +72,7 @@
         text-align: left;
         padding-left: 12px;
         font-weight: 600;
-        min-width: 150px; /* Increased for mobile visibility */
+        min-width: 150px;
         width: 150px;
       }
       @media (min-width: 768px) {
@@ -76,7 +85,7 @@
         cursor: pointer;
         transition: background 0.1s;
         min-width: 36px;
-        height: 44px; /* Touch target improvement */
+        height: 44px;
       }
       .checkbox-cell:hover {
         background: #F3F4F6;
@@ -126,19 +135,21 @@
       }
     </style>
     <script type="importmap">
-    {
-      "imports": {
-        "react": "https://esm.sh/react@^19.2.3",
-        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-        "recharts": "https://esm.sh/recharts@^3.6.0"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+  }
+}
+</script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
